Fix layout issues

--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,7 @@
 * {
 	box-sizing: border-box;
 	-webkit-tap-highlight-color: transparent;
+	touch-action: manipulation;
 }
 
 html {
@@ -57,4 +58,11 @@ a {
 }
 .no-scroll::-webkit-scrollbar {
   display: none; /* Chrome, Safari and Opera */
+}
+
+.no-bad-scale {
+    -webkit-backface-visibility: hidden;
+	backface-visibility: hidden;
+    -webkit-transform: translateZ(0) scale(1.0, 1.0);
+    transform: translateZ(0);
 }
